--- a/App/src/App.css
+++ b/App/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
-
+.css-69324s {
+  margin-top: 1rem;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -27,6 +29,7 @@
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
