--- a/App/src/Pages/Frontpage/Frontpage.css
+++ b/App/src/Pages/Frontpage/Frontpage.css
@@ -1,17 +1,22 @@
+* {
+  font-family: "Josefin Sans", sans-serif;
+}
+
 .landingimage {
   background-color: aquamarine;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 600px;
+  height: 90vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 20px;
   grid-auto-rows: minmax(40px, auto);
   grid-template-rows: 1fr 3fr 1fr;
+  overflow: hidden;
 }
 
 .landingimage__herotitle {
+  font-size: 3rem;
   grid-column: 1 / span 1;
   grid-row: 1;
   text-align: center;
@@ -20,18 +25,23 @@
 .landingimage__herotext {
   grid-column: 2 / span 1;
   grid-row: 2 / span 1;
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(60px);
+  padding: 6px 12px;
+  margin-right: 12px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
   font-size: 1.4rem;
+  max-height: 100%;
+  font-size: 100%;
 }
 
 .landingimage__herotextbuttons {
-  /* margin: 10px; */
+  display: flex;
+  justify-content: space-around;
+  gap: 5px;
 }
 
 .landingimage__herotextbuttons > Button {
-  margin: 10px;
 }
