--- a/App/src/Pages/Wanting/Wanting.css
+++ b/App/src/Pages/Wanting/Wanting.css
@@ -3,24 +3,8 @@
     background-color: #f2f2f2;
     padding: 20px;
 }
-/*
-.inputField {
-    display: inline-block;
 
-}
-
-input[type=text],
-select {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-*/
-Button {
+.wantingpage__button {
     width: 35ch;
     background-color: #4CAF50;
     color: white;
@@ -31,6 +15,6 @@ Button {
     cursor: pointer;
 }
 
-Button:hover {
+.wantingpage__button:hover {
     background-color: #3e8c42;
 } 
